--- a/www/includes/components/contact.html
+++ b/www/includes/components/contact.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h2>Get Involved</h2>
         <p>Interested in joining Hague Hackers or collaborating with us? Reach out!</p>
-        <form action="/submit" method="POST">
+        <form id="contactForm">
             <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required placeholder="Your Name">
