--- a/www/includes/components/cards.html
+++ b/www/includes/components/cards.html
@@ -3,8 +3,7 @@
         <h2>Our Focus Areas</h2>
         <div class="card-grid">
             <article class="card-item">
-                <img src="./img/pages/index/education.jpg" alt="Education and Knowledge Sharing"
-                    loading="lazy">
+                <img src="./img/pages/index/education.jpg" alt="Education and Knowledge Sharing" loading="lazy">
                 <h3>Education and Knowledge Sharing</h3>
                 <p>Collaborative learning to empower individuals with cybersecurity expertise.</p>
                 <a href="./education.html" class="btn">Learn More</a>
