--- a/www/includes/components/cards.html
+++ b/www/includes/components/cards.html
@@ -6,19 +6,19 @@
                 <img src="./img/pages/index/education.jpg" alt="Education and Knowledge Sharing" loading="lazy">
                 <h3>Education and Knowledge Sharing</h3>
                 <p>Collaborative learning to empower individuals with cybersecurity expertise.</p>
-                <a href="./education.html" class="btn">Learn More</a>
+                <a href="./education.html" class="btn">Our Expertise</a>
             </article>
             <article class="card-item">
                 <img src="./img/pages/index/ctf.jpg" alt="Capture the Flag Competitions" loading="lazy">
                 <h3>Capture the Flag Competitions</h3>
                 <p>Hands-on experience through participation in high-pressure CTF events.</p>
-                <a href="./ctf.html" class="btn">Learn More</a>
+                <a href="./ctf.html" class="btn">Join Us</a>
             </article>
             <article class="card-item">
                 <img src="./img/pages/index/ethical_hacking.jpg" alt="Ethical Commitment" loading="lazy">
                 <h3>Ethical Committed Community</h3>
                 <p>Adhering to a strict ethical code to ensure responsible and legal hacking practices.</p>
-                <a href="./ethics.html" class="btn">Learn More</a>
+                <a href="./ethics.html" class="btn">Our Ethics</a>
             </article>
         </div>
     </div>
