--- a/www/includes/pages/index-head.html
+++ b/www/includes/pages/index-head.html
@@ -9,6 +9,7 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="./css/components/hero.css"> <!-- Hero styles -->
     <link rel="stylesheet" href="./css/components/cards.css"> <!-- Cards styles -->
+    <link rel="stylesheet" href="./css/components/supporters.css"> <!-- Cards styles -->
     <link rel="stylesheet" href="./css/pages/index.css"> <!-- Page-specific styles for index.html -->
 
 </head>
