--- a/www/css/components/hero.css
+++ b/www/css/components/hero.css
@@ -37,3 +37,13 @@
     font-size: 24px;
     margin-bottom: 40px;
 }
+
+@media (max-width: 480px) {
+    .hero h1 {
+        font-size: 32px;
+    }
+
+    .hero h2 {
+        font-size: 18px;
+    }
+}
