--- a/www/includes/components/hero.html
+++ b/www/includes/components/hero.html
@@ -1,7 +1,13 @@
 <section class="hero">
     <div class="hero-content">
-        <h1>HAGUE HACKERS</h1>
-        <h2>Making the digital world safer through education</h2>
-        <a href="./about.html" class="btn">Learn More</a>
+        <div class="h1-container">
+            <h1>HAGUE HACKERS</h1>
+        </div>
+        <div class="h2-container">
+            <h2>Making the digital world safer through education</h2>
+        </div>
+        <div class="button-container">
+            <a href="./about.html" class="btn">Learn More</a>
+        </div>
     </div>
 </section>
