--- a/www/includes/components/hero.html
+++ b/www/includes/components/hero.html
@@ -7,7 +7,7 @@
             <h2>Making the digital world safer through education</h2>
         </div>
         <div class="button-container">
-            <a href="./about.html" class="btn">Learn More</a>
+            <a href="./contact.html" class="btn">Get In Touch</a>
         </div>
     </div>
 </section>
